details and basket

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     />
     <title>Chef</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/food-logo.png"
+      type="image/x-icon"
+    />
     <!-- bootstrap ikonları -->
     <link
       rel="stylesheet"
@@ -44,8 +49,13 @@
       <!-- ana içerik -->
       <main>
         <section class="results"></section>
-        <section class="recipe">a</section>
-        <section class="shopping">a</section>
+        <section class="recipe"></section>
+        <section class="shopping">
+          <h2>Sepet</h2>
+          <ul>
+            <li>Henüz herhangi bir alınacak yok</li>
+          </ul>
+        </section>
       </main>
     </div>
     <!-- js bağlantı -->
