--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
         <div class="likes">
           <i class="bi bi-bookmark-heart-fill"></i>
+          <div class="list"></div>
         </div>
       </header>
       <!-- ana içerik -->
@@ -52,6 +53,12 @@
         <section class="recipe"></section>
         <section class="shopping">
           <h2>Sepet</h2>
+          <div class="button-area">
+            <button id="clear">
+              <i class="bi bi-trash3-fill"></i>
+              <span>Sepeti Temizle</span>
+            </button>
+          </div>
           <ul>
             <li>Henüz herhangi bir alınacak yok</li>
           </ul>
